  * tcp: enforce tcp_min_snd_mss in tcp_mtu_probing()
  * tcp: fix fack_count accounting on tcp_shift_skb_data()
  * tcp: Avoid ABI change for DoS fixes
  * scsi: megaraid_sas: return error when create DMA pool failed
    (CVE-2019-11810)
  * ext4: zero out the unused memory region in the extent tree block
    (CVE-2019-11833)
  * Bluetooth: hidp: fix buffer overflow (CVE-2019-11884)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100

linux (3.16.68-1) jessie-security; urgency=high

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.16.65
    - wireless: airo: potential buffer overflow in sprintf()
    - [x86] drm/i915/ringbuffer: Delay after EMIT_INVALIDATE for gen4/gen5
    - [x86] PCI: Fix Broadcom CNB20LE unintended sign extension (redux)
    - pcrypt: use format specifier in kobject_add
    - dlm: fixed memory leaks after failed ls_remove_names allocation
    - dlm: possible memory leak on error path in create_lkb()
    - dlm: lost put_lkb on error path in receive_convert() and receive_unlock()
    - dlm: memory leaks on error path in dlm_user_request()
    - [i386] power: supply: olpc_battery: correct the temperature units
    - panic: avoid deadlocks in re-entrant console drivers
    - f2fs: read page index before freeing
    - [armhf] serial: imx: fix error handling in console_setup
    - b43: Fix error in cordic routine
    - ext4: missing unlock/put_page() in ext4_try_to_write_inline_data()
    - sunrpc: fix cache_head leak due to queued request
    - tty/ldsem: Wake up readers after timed out down_write()
    - [armhf] misc: vexpress: Off by one in vexpress_syscfg_exec()
    - ALSA: emux: Fix potential Spectre v1 vulnerabilities (CVE-2017-5753)
    - ALSA: pcm: Fix potential Spectre v1 vulnerability (CVE-2017-5753)
    - crypto: user - support incremental algorithm dumps
    - [armel/versatile] gpiolib: Fix return value of gpio_to_desc() stub if
      !GPIOLIB