@@ -18,98 +18,80 @@ Reported-by: huangwen <huangwen@venustech.com.cn>
 Signed-off-by: Takashi Iwai <tiwai@suse.de>
 Signed-off-by: Kalle Valo <kvalo@codeaurora.org>
 [bwh: Backported to 3.16:
- - Drop inapplicable change to WMM IE handling]
+ - The tail IEs are parsed in mwifiex_set_mgmt_ies, which looks for two
+   specific IEs rather than looping
+ - Check IE length against tail length after calling
+   cfg80211_find_vendor_ie(), but not after cfg80211_find_ie() since that
+   already does it
+ - On error, return without calling mwifiex_set_mgmt_beacon_data_ies()
+ - Drop inapplicable change to WMM IE handling
+ - Adjust filename]
 ---
  drivers/net/wireless/mwifiex/ie.c | 47 +++++++++++++++--------
  1 file changed, 31 insertions(+), 16 deletions(-)
 
 --- a/drivers/net/wireless/mwifiex/ie.c
 +++ b/drivers/net/wireless/mwifiex/ie.c
-@@ -328,6 +328,8 @@ static int mwifiex_uap_parse_tail_ies(st
- 	struct ieee80211_vendor_ie *vendorhdr;
- 	u16 gen_idx = MWIFIEX_AUTO_IDX_MASK, ie_len = 0;
- 	int left_len, parsed_len = 0;
+@@ -328,6 +328,8 @@ int mwifiex_set_mgmt_ies(struct mwifiex_
+ 	struct ieee_types_header *rsn_ie, *wpa_ie = NULL;
+ 	u16 rsn_idx = MWIFIEX_AUTO_IDX_MASK, ie_len = 0;
+ 	const u8 *vendor_ie;
 +	unsigned int token_len;
 +	int err = 0;
  
- 	if (!info->tail || !info->tail_len)
- 		return 0;
-@@ -343,6 +345,12 @@ static int mwifiex_uap_parse_tail_ies(st
- 	 */
- 	while (left_len > sizeof(struct ieee_types_header)) {
- 		hdr = (void *)(info->tail + parsed_len);
-+		token_len = hdr->len + sizeof(struct ieee_types_header);
-+		if (token_len > left_len) {
-+			err = -EINVAL;
-+			goto out;
-+		}
-+
- 		switch (hdr->element_id) {
- 		case WLAN_EID_SSID:
- 		case WLAN_EID_SUPP_RATES:
-@@ -356,13 +364,16 @@ static int mwifiex_uap_parse_tail_ies(st
- 		case WLAN_EID_VENDOR_SPECIFIC:
- 			break;
- 		default:
--			memcpy(gen_ie->ie_buffer + ie_len, hdr,
--			       hdr->len + sizeof(struct ieee_types_header));
--			ie_len += hdr->len + sizeof(struct ieee_types_header);
+ 	if (info->tail && info->tail_len) {
+ 		gen_ie = kzalloc(sizeof(struct mwifiex_ie), GFP_KERNEL);
+@@ -341,8 +343,13 @@ int mwifiex_set_mgmt_ies(struct mwifiex_
+ 		rsn_ie = (void *)cfg80211_find_ie(WLAN_EID_RSN,
+ 						  info->tail, info->tail_len);
+ 		if (rsn_ie) {
+-			memcpy(gen_ie->ie_buffer, rsn_ie, rsn_ie->len + 2);
+-			ie_len = rsn_ie->len + 2;
++			token_len = rsn_ie->len + 2;
 +			if (ie_len + token_len > IEEE_MAX_IE_SIZE) {
 +				err = -EINVAL;
 +				goto out;
 +			}
-+			memcpy(gen_ie->ie_buffer + ie_len, hdr, token_len);
++			memcpy(gen_ie->ie_buffer + ie_len, rsn_ie, token_len);
 +			ie_len += token_len;
- 			break;
+ 			gen_ie->ie_length = cpu_to_le16(ie_len);
  		}
--		left_len -= hdr->len + sizeof(struct ieee_types_header);
--		parsed_len += hdr->len + sizeof(struct ieee_types_header);
-+		left_len -= token_len;
-+		parsed_len += token_len;
+ 
+@@ -352,9 +359,15 @@ int mwifiex_set_mgmt_ies(struct mwifiex_
+ 						    info->tail_len);
+ 		if (vendor_ie) {
+ 			wpa_ie = (struct ieee_types_header *)vendor_ie;
+-			memcpy(gen_ie->ie_buffer + ie_len,
+-			       wpa_ie, wpa_ie->len + 2);
+-			ie_len += wpa_ie->len + 2;
++			token_len = wpa_ie->len + 2;
++			if (token_len >
++			    info->tail + info->tail_len - (u8 *)wpa_ie ||
++			    ie_len + token_len > IEEE_MAX_IE_SIZE) {
++				err = -EINVAL;
++				goto out;
++			}
++			memcpy(gen_ie->ie_buffer + ie_len, wpa_ie, token_len);
++			ie_len += token_len;
+ 			gen_ie->ie_length = cpu_to_le16(ie_len);
+ 		}
+ 
+@@ -362,13 +375,16 @@ int mwifiex_set_mgmt_ies(struct mwifiex_
+ 			if (mwifiex_update_uap_custom_ie(priv, gen_ie, &rsn_idx,
+ 							 NULL, NULL,
+ 							 NULL, NULL)) {
+-				kfree(gen_ie);
+-				return -1;
++				err = -EINVAL;
++				goto out;
+ 			}
+ 			priv->rsn_idx = rsn_idx;
+ 		}
+ 
++	out:
+ 		kfree(gen_ie);
++		if (err)
++			return err;
  	}
  
- 	/* parse only WPA vendor IE from tail, WMM IE is configured by
-@@ -372,15 +383,17 @@ static int mwifiex_uap_parse_tail_ies(st
- 						    WLAN_OUI_TYPE_MICROSOFT_WPA,
- 						    info->tail, info->tail_len);
- 	if (vendorhdr) {
--		memcpy(gen_ie->ie_buffer + ie_len, vendorhdr,
--		       vendorhdr->len + sizeof(struct ieee_types_header));
--		ie_len += vendorhdr->len + sizeof(struct ieee_types_header);
-+		token_len = vendorhdr->len + sizeof(struct ieee_types_header);
-+		if (ie_len + token_len > IEEE_MAX_IE_SIZE) {
-+			err = -EINVAL;
-+			goto out;
-+		}
-+		memcpy(gen_ie->ie_buffer + ie_len, vendorhdr, token_len);
-+		ie_len += token_len;
- 	}
- 
--	if (!ie_len) {
--		kfree(gen_ie);
--		return 0;
--	}
-+	if (!ie_len)
-+		goto out;
- 
- 	gen_ie->ie_index = cpu_to_le16(gen_idx);
- 	gen_ie->mgmt_subtype_mask = cpu_to_le16(MGMT_MASK_BEACON |
-@@ -390,13 +403,15 @@ static int mwifiex_uap_parse_tail_ies(st
- 
- 	if (mwifiex_update_uap_custom_ie(priv, gen_ie, &gen_idx, NULL, NULL,
- 					 NULL, NULL)) {
--		kfree(gen_ie);
--		return -1;
-+		err = -EINVAL;
-+		goto out;
- 	}
- 
- 	priv->gen_idx = gen_idx;
-+
-+ out:
- 	kfree(gen_ie);
--	return 0;
-+	return err;
- }
- 
- /* This function parses different IEs-head & tail IEs, beacon IEs,
+ 	return mwifiex_set_mgmt_beacon_data_ies(priv, info);
