@@ -697,6 +697,7 @@ bugfix/all/tcp-fix-fack_count-accounting-on-tcp_shift_skb_data.patch
 bugfix/all/scsi-megaraid_sas-return-error-when-create-dma-pool-failed.patch
 bugfix/all/ext4-zero-out-the-unused-memory-region-in-the-extent-tree-block.patch
 bugfix/all/bluetooth-hidp-fix-buffer-overflow.patch
+bugfix/all/mwifiex-fix-heap-overflow-in-mwifiex_uap_parse_tail_.patch
 
 # Fix ABI changes
 debian/abi/tcp-avoid-abi-change-for-dos-fixes.patch
