@@ -17,6 +17,7 @@ linux (3.16.68-2) UNRELEASED; urgency=medium
   * ext4: zero out the unused memory region in the extent tree block
     (CVE-2019-11833)
   * Bluetooth: hidp: fix buffer overflow (CVE-2019-11884)
+  * mwifiex: Fix heap overflow in mwifiex_uap_parse_tail_ies() (CVE-2019-10126)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jun 2019 19:45:46 +0100
 
